# anti_swing_control

./: .gitignore  CMakeLists.txt  CSV_REPLAY_REFERENCE.md  Makefile  PROJECT_STRUCTURE.md  README.md  main.cpp  pend_observer.cpp  pend_observer.h  plot_results.py  replay_csv.cpp  run.sh  run_csv_replay.sh  run_lqr.sh  run_mpc.sh  run_offline.sh  run_replay.sh  run_ruckig.sh
data/: README.md
docs/: ctl_pendulum_osc.md  lqr_controller_design.md  offline_three_phase_trajectory.md
include/controller/: lqr_controller.hpp  lqr_gain.hpp
include/dynamics/: slung_load_dynamics.hpp
include/observer/: pend_observer.h  pendulum_observer.hpp
include/sensor/: imu_sensor_model.hpp
include/simulation/: closed_loop_simulation.hpp  open_loop_simulation.hpp
include/trajectory/: ruckig_planner.hpp
include/utils/: csv_logger.hpp  math_utils.hpp  type_defs.hpp
scripts/: compute_lqr_gain.py  plot_animation.py  plot_brake_phase.py  plot_closed_loop.py  plot_comparison.py  plot_replay_results.py  plot_results.py
scripts/analysis/: compare_mpc_lqr.py  compare_mpc_modes.py
scripts/design/: compute_lqr_gain.py
scripts/plot/: plot_animation.py  plot_brake_phase.py  plot_closed_loop.py  plot_comparison.py  plot_jerk_comparison.py  plot_mpc.py  plot_offline_brake_phase.py  plot_offline_trajectory.py  plot_omega_comparison.py  plot_replay_results.py  plot_results.py  plot_t0mode_comparison.py  plot_thrust_comparison.py  plot_trajectory.py  plot_zero_cross_comparison.py
scripts/simulation/: run_ctl_pendulum_osc.py  run_mpc_simulation.py  run_offline_trajectory.py
src/apps/: run_closed_loop_lqr.cpp  run_csv_replay.cpp  run_open_loop_sim.cpp  run_ruckig_trajectory.cpp
src/controller/: lqr_controller.cpp
src/dynamics/: ctl_pendulum_osc.m  slung_load_dynamics.cpp
src/observer/: pend_observer.cpp  pendulum_observer.cpp
src/sensor/: imu_sensor_model.cpp
src/simulation/: closed_loop_simulation.cpp  open_loop_simulation.cpp
src/trajectory/: ruckig_planner.cpp
src/utils/: csv_logger.cpp  math_utils.cpp
standalone_lqr/: CMakeLists.txt  main.cpp  standalone_lqr.cpp  standalone_lqr.hpp
